// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sending Domains Icons render correctly 1`] = `
<Check
  size={16}
/>
`;

exports[`Sending Domains Icons render correctly 2`] = `
<Error
  size={16}
/>
`;
